# Bartender_Assistant

./: .gitignore  README.MD  manage.py  pyproject.toml
Bartender_Assistant/: asgi.py  settings.py  urls.py  wsgi.py
bartender/: api_views.py  forms.py  serializers.py  urls.py  views.py
core/: admin.py  exceptions.py  forms.py  models.py  rules.py  tests.py  urls.py  utilis.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20211012_2238.py  0002_auto_20211208_1931.py  0002_ingredient_image.py  0003_alter_ingredientstorage_image.py  0003_alter_ingredientstorage_storage_amount.py  0003_auto_20211014_0940.py  0004_alter_drink_image.py  0004_alter_ingredientstorage_ingredient.py  0004_auto_20211014_0950.py  0005_alter_ingredient_unit.py  0005_auto_20211111_1426.py  0005_user_customer_table.py  0006_alter_drink_name.py  0006_alter_drinkqueue_status.py  0006_auto_20210925_1948.py  0007_alter_drinkqueue_order_date.py  0007_auto_20210925_2007.py  0007_auto_20211113_2307.py  0008_auto_20210925_2054.py  0008_auto_20220111_2223.py  0009_alter_ingredientstorage_name.py  0009_auto_20220117_2246.py  0010_alter_ingredientstorage_unit.py  0010_ingredientstorage_storage_amount_calculation_margin.py  0011_auto_20220201_0112.py
customer/: api_views.py  urls.py  views.py
secrets_static/data/: accounts_data.json
static/css/: core.css
templates/bartender/: base.html  earns.html  home.html
templates/core/: 404.html  500.html  baner.html  base.html  change_password.html  home.html  login.html  pagination.html
templates/customer/: base.html  home.html  set_table.html
(+36 files in other folders)
